[gd_scene load_steps=30 format=3 uid="uid://b0a2l2q2jb60x"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_yhu7u"]
[ext_resource type="Texture2D" uid="uid://cu2vxb4niohqv" path="res://Assets/Player Assets/Death/player_death1.png" id="2_ik881"]
[ext_resource type="Texture2D" uid="uid://dd70025tqbkmm" path="res://Assets/Player Assets/Death/player_death2.png" id="3_xgvrp"]
[ext_resource type="Texture2D" uid="uid://br1kin1kcoevr" path="res://Assets/Player Assets/Death/player_death3.png" id="4_u56tx"]
[ext_resource type="Texture2D" uid="uid://dr6sa32fyqn3j" path="res://Assets/Player Assets/Death/player_death4.png" id="5_btsal"]
[ext_resource type="Texture2D" uid="uid://bql8ixujgoi7s" path="res://Assets/Player Assets/Idle/player_idle1.png" id="5_sj8re"]
[ext_resource type="Texture2D" uid="uid://j2foo6v5tjrs" path="res://Assets/Player Assets/Idle/player_idle2.png" id="6_fpa4l"]
[ext_resource type="Texture2D" uid="uid://cthme4wsq2ueb" path="res://Assets/Player Assets/Jump/player_jump1.png" id="8_fxa3n"]
[ext_resource type="Texture2D" uid="uid://1jiij2ihsw4d" path="res://Assets/Player Assets/Run/player_run1.png" id="9_3yjw7"]
[ext_resource type="Texture2D" uid="uid://b7krl0rupj14b" path="res://Assets/Player Assets/Jump/player_jump2.png" id="9_lcxhv"]
[ext_resource type="Texture2D" uid="uid://bnf63eb1bup7" path="res://Assets/Player Assets/Run/player_run2.png" id="10_44jmj"]
[ext_resource type="Texture2D" uid="uid://b3wasubg3vwoj" path="res://Assets/Player Assets/Run/player_run3.png" id="11_j2jb4"]
[ext_resource type="Texture2D" uid="uid://sfwr3x0j156i" path="res://Assets/Player Assets/Run/player_run4.png" id="12_1h7u2"]
[ext_resource type="Texture2D" uid="uid://c6d17e24aqx8u" path="res://Assets/Player Assets/Run/player_run5.png" id="13_s1api"]
[ext_resource type="Texture2D" uid="uid://1yxw0crb6y4f" path="res://Assets/Player Assets/Run/player_run6.png" id="14_7air2"]
[ext_resource type="Texture2D" uid="uid://bsx8cqan8pp3o" path="res://Assets/Player Assets/Run/player_run7.png" id="15_61j2m"]
[ext_resource type="Texture2D" uid="uid://ca10d2v367iav" path="res://Assets/Player Assets/Run/player_run8.png" id="16_hk0rg"]
[ext_resource type="AudioStream" uid="uid://spos8glvg2vo" path="res://Sound Effects/player-jump.mp3" id="16_kxta0"]
[ext_resource type="AudioStream" uid="uid://bfwpleovfy1xt" path="res://Sound Effects/player-death.mp3" id="17_0mwfp"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kcoc0"]
height = 32.0

[sub_resource type="SpriteFrames" id="SpriteFrames_qw8xv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ik881")
}, {
"duration": 1.0,
"texture": ExtResource("3_xgvrp")
}, {
"duration": 1.0,
"texture": ExtResource("4_u56tx")
}, {
"duration": 1.0,
"texture": ExtResource("5_btsal")
}],
"loop": true,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_sj8re")
}, {
"duration": 1.0,
"texture": ExtResource("6_fpa4l")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_fxa3n")
}, {
"duration": 1.0,
"texture": ExtResource("9_lcxhv")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_3yjw7")
}, {
"duration": 1.0,
"texture": ExtResource("10_44jmj")
}, {
"duration": 1.0,
"texture": ExtResource("11_j2jb4")
}, {
"duration": 1.0,
"texture": ExtResource("12_1h7u2")
}, {
"duration": 1.0,
"texture": ExtResource("13_s1api")
}, {
"duration": 1.0,
"texture": ExtResource("14_7air2")
}, {
"duration": 1.0,
"texture": ExtResource("15_61j2m")
}, {
"duration": 1.0,
"texture": ExtResource("16_hk0rg")
}],
"loop": true,
"name": &"Run",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_202vs"]
resource_name = "Dash"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"Dash"]
}

[sub_resource type="Animation" id="Animation_uad6k"]
resource_name = "Death"
length = 0.7
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Death"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_xx2p3"]
resource_name = "Fall"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Jump"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_ootfx"]
resource_name = "Idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_bb622"]
resource_name = "Jump"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Jump"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_vil6p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"Idle"]
}

[sub_resource type="Animation" id="Animation_t5u8j"]
resource_name = "Run"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"Run"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tajb3"]
_data = {
"Dash": SubResource("Animation_202vs"),
"Death": SubResource("Animation_uad6k"),
"Fall": SubResource("Animation_xx2p3"),
"Idle": SubResource("Animation_ootfx"),
"Jump": SubResource("Animation_bb622"),
"RESET": SubResource("Animation_vil6p"),
"Run": SubResource("Animation_t5u8j")
}

[node name="Player" type="CharacterBody2D"]
z_index = 2
script = ExtResource("1_yhu7u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_kcoc0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_qw8xv")
animation = &"Idle"

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.6, 1.6)
limit_left = 0
limit_top = 0
limit_right = 2302
limit_bottom = 645

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tajb3")
}

[node name="SoundEffects" type="Node" parent="."]

[node name="JumpSfx" type="AudioStreamPlayer" parent="SoundEffects"]
stream = ExtResource("16_kxta0")
volume_db = -12.0
pitch_scale = 0.9
mix_target = 1

[node name="DeathSfx" type="AudioStreamPlayer" parent="SoundEffects"]
stream = ExtResource("17_0mwfp")
volume_db = -10.0
